調整錯誤訊息

--- a/index.html
+++ b/index.html
@@ -2488,7 +2488,7 @@
 					return "★".repeat(currStar) + "☆".repeat(maxStar - currStar);
 				}
 			} else {
-				return "Stars Error";
+				return `Error: Stars (${currStar}) exceed Rarity (${maxStar})`;
 			}
 		}
 
