調整語言選擇的顯示標頭

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
 	<div id="siteSetting">
 		<div id="chooseLang">
 			<select id="languagePick" onchange="setPickLang()">
-				<option value="" disabled selected hidden>▼ Pick Info Language ▼</option>
+				<option value="" disabled selected hidden>🌐 Language</option>
 				<option lang="en" value="English" data-shortname="EN">English (EN)</option>
 				<option lang="ja" value="Japanese" data-shortname="JP">日本語 (JP)</option>
 				<option lang="zh-Hant" value="ChineseTraditional" data-shortname="TC">繁體中文 (TC)</option>
